[package]
name = "powertest"
description = "Clap Trycmd Test Generator"
edition = "2021"
authors = ["Christina Sørensen <christina@cafkafk.com>"]
categories = ["command-line-utilities"]
license = "GPL-3.0-only"
version = "0.0.1"
rust-version = "1.70.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.9.5"
