[package]
name = "powertest"
description = "Clap Trycmd Test Generator"
edition = "2021"
authors = ["Christina Sørensen <christina@cafkafk.com>"]
categories = ["command-line-utilities"]
license = "GPL-3.0-only"
version = "0.0.1"
rust-version = "1.70.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["cargo"] }
log = "0.4.20"
regex = "1.9.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_yaml = "0.9.25"

[build-dependencies]
clap = { version = "4.4.6", features = ["cargo"] }
clap_complete = "4"
clap_mangen = "0.2.14"
